--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "~4.16.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.13.0",
+    "faker": "^6.6.6",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "per-env": "^1.0.2",
