--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "express-project-starter",
   "version": "0.0.0",
+  "main": "index.js",
   "private": true,
   "scripts": {
     "start": "per-env",
